# streams-charts-dashboard

./: .env.example  .gitignore  README.md  connection.py  home.py  init_local_db.py  main.py  pyproject.toml  report_template.html  requirements.txt  streamer.py  top_weekly.py  twitch_weekly.py
.streamlit/: secrets.example.toml
data/2024/49/: 202449.csv
data/2024/50/: 202450.csv
data/2024/51/: 202451.csv
data/2024/52/: 202452.csv
data/2025/1/: 20251.csv
data/2025/2/: 20252.csv
docs/: index.html  styles.css
src/: main.py
src/utils/: __init__.py  db_operations.py  file_utils.py  report_utils.py
